...
                (final itemTheme) => Container(
                  width: 80,
                  height: 80,
                  color: itemTheme.backgroundColor,
                  child: Center(
                    child: Text(
                      'Aa',
                      style: TextStyle(
                        color: itemTheme.textColor,
                        fontSize: 20,
                      ),
                    ),
                  ),
...
